[package]
name = "rslinker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
fast-async-mutex = { git="https://github.com/Zhou-Pixel/fast-async-mutex.git" }
log = "0.4.20"
once_cell = "1.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"
crypto2 = { git = "https://github.com/shadowsocks/crypto2.git" }
time = "0.3.25"
