[package]
name = "rslinker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
fast-async-mutex = { git = "https://github.com/Zhou-Pixel/fast-async-mutex.git" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
time = "0.3"
s2n-quic = { version = "1", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls", "cuckoofilter", "hash_hasher", "zerocopy", "zerocopy-derive", "zeroize"] }
bytes = "1"
tokio-rustls = "0.24"
quinn = "0.10"
rustls = { version = "0.21", features = ["quic"] }
rustls-pemfile = "1"
